# mcp-gateway

./: .gitignore  README.md  config.example.yaml  pyproject.toml
examples/: dynamic_server.py  http_calc_server.py  knowledge_server.py
src/mcp_gateway/: __init__.py  __main__.py  app.py  cli.py  config.py  gateway.py  server.py  upstream.py
tests/: echo_server.py  test_config.yaml  test_openai_agents.py
